--- a/websrc/stylesheets/common/_variables.scss
+++ b/websrc/stylesheets/common/_variables.scss
@@ -1,5 +1,5 @@
 // Glyphicons font path
-$icon-font-path:        "../fonts/";
+$icon-font-path:        '../fonts/';
 
 // Grid settings
 $main-sm-columns:       12;
