--- a/websrc/stylesheets/main.scss
+++ b/websrc/stylesheets/main.scss
@@ -9,7 +9,7 @@
 //@import 'common/fonts';
 //@import 'common/mixins';
 
-@import '../../www/assets/css/sprite.scss';
+@import 'sprite';
 
 $black: #000000;
 $white: #FFF;
