adjustment of Bower

--- a/app/templates/Homepage/default.latte
+++ b/app/templates/Homepage/default.latte
@@ -2,7 +2,7 @@
 
 {block content}
 <div id="content">
-	<h2>Legerete skeleton default page</h2>
+	<h2>Skeleton default page</h2>
 </div>
 {/block}
 
