--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -7,7 +7,7 @@
 <head>
 	<meta charset="utf-8">
 
-	<title>{ifset title}{include title|stripHtml} | {/ifset}Legerete skeleton</title>
+	<title>{ifset title}{include title|stripHtml} | {/ifset}Skeleton</title>
 
 	<link rel="stylesheet" href="{$basePath}/assets/css/all.min.css">
 	<meta name="viewport" content="width=device-width">
