--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -9,7 +9,7 @@
 
 	<title>{ifset title}{include title|stripHtml} | {/ifset}Skeleton</title>
 
-	<link rel="stylesheet" href="{$basePath}/assets/css/all.min.css">
+	<link rel="stylesheet" href="{$basePath}/assets/css/all.min.css{resourceVersion}">
 	<meta name="viewport" content="width=device-width">
 	{block head}{/block}
 </head>
@@ -20,7 +20,7 @@
 	{include content}
 
 	{block scripts}
-	<script src="{$basePath}/assets/js/all.min.js"></script>
+	<script src="{$basePath}/assets/js/all.min.js{resourceVersion}"></script>
 	{/block}
 </body>
 </html>
