--- a/websrc/stylesheets/sprite.scss
+++ b/websrc/stylesheets/sprite.scss
@@ -20,8 +20,8 @@ $icon-default-width: 16px;
 $icon-default-height: 16px;
 $icon-default-total-width: 42px;
 $icon-default-total-height: 16px;
-$icon-default-image: 'www/assets/images/sprite.png';
-$icon-default: (0px, 0px, 0px, 0px, 16px, 16px, 42px, 16px, 'www/assets/images/sprite.png', 'icon-default', );
+$icon-default-image: '/assets/images/sprite.png';
+$icon-default: (0px, 0px, 0px, 0px, 16px, 16px, 42px, 16px, '/assets/images/sprite.png', 'icon-default', );
 $icon-unbranded-name: 'icon-unbranded';
 $icon-unbranded-x: 26px;
 $icon-unbranded-y: 0px;
@@ -31,13 +31,13 @@ $icon-unbranded-width: 16px;
 $icon-unbranded-height: 16px;
 $icon-unbranded-total-width: 42px;
 $icon-unbranded-total-height: 16px;
-$icon-unbranded-image: 'www/assets/images/sprite.png';
-$icon-unbranded: (26px, 0px, -26px, 0px, 16px, 16px, 42px, 16px, 'www/assets/images/sprite.png', 'icon-unbranded', );
+$icon-unbranded-image: '/assets/images/sprite.png';
+$icon-unbranded: (26px, 0px, -26px, 0px, 16px, 16px, 42px, 16px, '/assets/images/sprite.png', 'icon-unbranded', );
 $spritesheet-width: 42px;
 $spritesheet-height: 16px;
-$spritesheet-image: 'www/assets/images/sprite.png';
+$spritesheet-image: '/assets/images/sprite.png';
 $spritesheet-sprites: ($icon-default, $icon-unbranded, );
-$spritesheet: (42px, 16px, 'www/assets/images/sprite.png', $spritesheet-sprites, );
+$spritesheet: (42px, 16px, '/assets/images/sprite.png', $spritesheet-sprites, );
 
 /*
 The provided mixins are intended to be used with the array-like variables
