Basic Websockets support

--- a/app/templates/Homepage/default.latte
+++ b/app/templates/Homepage/default.latte
@@ -5,7 +5,7 @@
 	<br><br><br>
 	<a n:href="test!" class="ajax">Ajax do test</a><hr>
 	<a n:href=":Legerete:User:Sign:in" class="web-socket">WS Sign:in</a><br>
-	<a n:href="test!" class="web-socket">WS do test</a><br>
+	<a n:href="test!" class="web-socket">WS do tests</a><br>
 
 
 
