--- a/app/templates/SPA/snippets/left-menu.latte
+++ b/app/templates/SPA/snippets/left-menu.latte
@@ -7,7 +7,7 @@
 		</a>
 	</li>
 	<li>
-		<a href="#" title="{_left-menu.users}">
+		<a data-bind="click: openPanel" data-panel-type="users" href="#"  title="{_left-menu.users}">
 			<i class="glyph-icon icon-user"></i>
 			<span>{_left-menu.users}</span>
 		</a>
