--- a/app/templates/SPA/snippets/left-menu.latte
+++ b/app/templates/SPA/snippets/left-menu.latte
@@ -33,7 +33,7 @@
 	</li>
 	<li class="header"><span>{_left-menu.planning}</span></li>
 	<li>
-		<a href="#" title="{_left-menu.calendar}">
+		<a data-bind="click: openPanel" data-panel-type="scheduler" href="#" title="{_left-menu.calendar}">
 			<i class="glyph-icon icon-calendar"></i>
 			<span>{_left-menu.calendar}</span>
 		</a>
