--- a/app/templates/SPA.@layout.latte
+++ b/app/templates/SPA.@layout.latte
@@ -18,6 +18,7 @@
 	{* SPA templates includes *}
 	{include ./SPA/kendo-templates/views/spa-dashboard.latte}
 	{include ./SPA/kendo-templates/views/spa-users.latte}
+	{include ./SPA/kendo-templates/views/spa-scheduler.latte}
 
 	<div n:foreach="$flashes as $flash" n:class="flash, $flash->type">{$flash->message}</div>
 	{include content}
