Closed #26 - Complete scheduler

--- a/app/templates/SPA.@layout.latte
+++ b/app/templates/SPA.@layout.latte
@@ -410,13 +410,8 @@
 							{include ./SPA/kendo-templates/panels-list.latte}
 						</div>
 					</div>
-					{*<div id="page-title">*}
-					{*<h2>Dashboard</h2>*}
-					{*<p>The most complete user interface framework that can be used to create stunning admin dashboards and presentation websites.</p>*}
-					{*</div>*}
 					<div id="app-content">
 					</div>
-
 				</div>
 			</div>
 		</div>
@@ -426,6 +421,7 @@
 	<script src="{$basePath}/assets/js/all.min.js{resourceVersion}"></script>
 	<script src="{$basePath}/assets/js/dev.js{resourceVersion}"></script>
 	<script src="{$basePath}/kendo/kendo.all.min.js{resourceVersion}"></script>
+	<script src="{$basePath}/kendo/kendo.timezones.min.js{resourceVersion}"></script>
 	<script type="text/javascript">
 		/* Responsive tabs */
 		$(function () {
