--- a/app/templates/SPA/kendo-templates/views/spa-scheduler.latte
+++ b/app/templates/SPA/kendo-templates/views/spa-scheduler.latte
@@ -1,11 +1,10 @@
-<script id="spa-view-scheduler" type="text/x-kendo-template" data-source-read="{link :LeSpaScheduler:Scheduler:Scheduler: do=>read}" data-source-create="{link :LeSpaScheduler:Scheduler:Scheduler: do=>create}">
-	<h1>Scheduler</h1>
+<script id="spa-view-scheduler" type="text/x-kendo-template" data-source-read="{link :LeSpaScheduler:Scheduler:Scheduler: do=>read}" data-source-create="{link :LeSpaScheduler:Scheduler:Scheduler: do=>create}" data-source-update="{link :LeSpaScheduler:Scheduler:Scheduler: do=>update}" data-source-destroy="{link :LeSpaScheduler:Scheduler:Scheduler: do=>destroy}">
 	<div data-role="scheduler"
-	     data-views="['week']"
+	     data-views="[{ type: 'day', showWorkHours: true }, { type: 'week', showWorkHours: true, selected: true }, 'month', 'agenda']"
 	     data-bind="source: tasks,
-            visible: isVisible,
-            events: {
-              save: onSave
-         }"
-	     style="height: 600px"></div>
+            visible: isVisible, events: {
+                navigate: navigate
+	        }"
+	     data-first-day="1"
+	     style="height: 400px"></div>
 </script>
