--- a/vendor-dev/legerete/user-sign-in/nette-src/Components/ForgotPassword/templates/ResetRequest.latte
+++ b/vendor-dev/legerete/user-sign-in/nette-src/Components/ForgotPassword/templates/ResetRequest.latte
@@ -32,7 +32,7 @@
 						</div>
 					</div>
 					<div class="form-group">
-						<a href="{plink :Legerete:User:Sign:in}" id="sign-in-link" data-show="sign-in-form-container" data-hide="forgot-password-form-container" title="Sign in">{_sign.forgotPassword.form.signIn}</a>
+						<a href="{plink :LeSignIn:UserSignIn:Sign:in}" id="sign-in-link" data-show="sign-in-form-container" data-hide="forgot-password-form-container" title="Sign in">{_sign.forgotPassword.form.signIn}</a>
 					</div>
 					<button n:name="submit" class="btn btn-success btn-block">{_sign.forgotPassword.form.buttonResetPassword}</button>
 				</div>
