Sprava uzivatelu - seznam, vytvareni, editace zakladnich udaju

--- a/app/templates/SPA/kendo-templates/views/spa-dashboard.latte
+++ b/app/templates/SPA/kendo-templates/views/spa-dashboard.latte
@@ -1,5 +1,6 @@
 <script id="spa-view-dashboard" type="text/x-kendo-template">
-	<h1>Dashboard view</h1>
-	<span>Tralala lalala</span>
-	#data#
+	<div class="content-box">
+		<h3 class="content-box-header">{_dashboard.h1}
+		</h3>
+	</div>
 </script>
