--- a/app/templates/SPA/snippets/left-menu.latte
+++ b/app/templates/SPA/snippets/left-menu.latte
@@ -12,6 +12,12 @@
 			<span>{_left-menu.users}</span>
 		</a>
 	</li>
+	<li>
+		<a data-bind="click: openPanel" data-panel-type="acl" href="#"  title="{_left-menu.acl}">
+			<i class="glyph-icon icon-key"></i>
+			<span>{_left-menu.acl}</span>
+		</a>
+	</li>
 	<li class="header"><span>{_left-menu.list}</span></li>
 	<li>
 		<a href="#" title="{_left-menu.offer}">
