--- a/app/templates/SPA/kendo-templates/views/spa-users.latte
+++ b/app/templates/SPA/kendo-templates/views/spa-users.latte
@@ -1,33 +1,154 @@
-<script id="spa-view-users" type="text/x-kendo-template">
-	<h1>{_users.users.h1}</h1>
-	<div data-role="grid"
-			data-editable="{ mode: 'popup'}"
-			data-toolbar="['create', 'save']"
-			data-columns="[
-				{ command: [
-						{
-							name: '{_customEdit}',
-							click: SPA.openPanel
-						}
-					]
-				},
-				{
-					'field': 'customUserEdit',
-					'title': '{_users.edit}',
-					'template': '<div class=\'btn btn-primary\' onclick=\'SPA.openPanel(this)\' data-panel-type=\'user-edit\' data-user-id=\'#=id#\'>edit</div>'
-				},
-				{ 'field': 'ProductName', 'width': 270 },
-				{ 'field': 'UnitPrice' },
-            ]"
-			data-bind="source: users,
-				visible: isVisible,
-				events: {
-				save: onSave
-			}"
-			style="height: 600px"></div>
+{capture $avatarBigNoImage}data/images/noimage/03/no-image.350x350.fit.q100.png{/capture}
+{capture $avatarLoad}assets/images/svg-loaders/bars.svg{/capture}
+
+<script id="spa-view-users" type="text/x-kendo-template" data-source-read="{link LeSpaUser:User:User:}?do=read">
+	<div class="content-box">
+		<h3 class="content-box-header">{_users.users.h1}
+		</h3>
+		<div data-role="grid"
+				data-editable="{ mode: 'popup'}"
+				data-toolbar="[
+					{
+						name: 'createUser',
+						text: '{_users.users.create}',
+						template: '<div class=\'btn btn-success btn-xs\' onclick=\'SPA.openPanel(this)\' data-panel-type=\'user-edit\' data-user-id=\'\'><span class=\'glyph-icon icon-plus\'></span> {_users.users.create}</div>'
+					}
+				]"
+				data-columns="[
+					{
+						'field': 'customUserEdit',
+						'title': '{_users.users.edit}',
+						'template': '<div class=\'btn btn-warning btn-xs\' onclick=\'SPA.openPanel(this)\' data-panel-type=\'user-edit\' data-user-id=\'#=id#\'><i class=\'glyph-icon icon-pencil\'></i></div>',
+						width: 50
+					},
+					{ 'field': 'name', title:' ', template: '<img src=\'/#=avatarSmall#\' alt=\'\' class=\'img-circle\' height=\'25\' width=\'30\'>', width: 40 },
+					{ 'field': 'name', title:'{_users.users.name}', 'width': 270 },
+					{ 'field': 'surname', title:'{_users.users.surname}' },
+					{ 'field': 'phone', title:'{_users.users.phone}' },
+	            ]"
+				data-bind="source: users,
+					visible: isVisible,
+					events: {
+					save: onSave
+				}"
+				style="height: 600px">
+		</div>
+	</div>
 </script>
 
-<script id="spa-view-user" type="text/x-kendo-template">
-	<h1>{_users.user.h1}</h1>
-	<div class="btn btn-success" data-bind="click: save"></div>
+<script id="spa-view-user" type="text/x-kendo-template"
+		data-source-create="{link LeSpaUser:User:User:}?do=create"
+		data-source-read="{link LeSpaUser:User:User:}?do=read&id="
+		data-source-update="{link LeSpaUser:User:User:}?do=update"
+		data-source-uploadAvatar="{link LeSpaUser:User:User:}?do=uploadAvatar"
+        data-avatar-big-no-image="{$avatarBigNoImage}"
+        data-avatar-load-image="{$avatarLoad}"
+>
+	<div class="content-box" id="user-edit">
+		<h3 class="content-box-header">{_users.user.h1}
+			<span data-bind="text: user.name"></span>
+			<span data-bind="text: user.surname"></span>
+			<div class="header-buttons">
+				<a class="btn btn-success btn-xs" data-bind="click: saveUser, visible: isDirty"><span class="glyph-icon icon-save"></span> {_users.user.save}</a>
+			</div>
+		</h3>
+		<div class="row">
+			<div class="col-lg-4">
+				<div class="panel-layout">
+					<div class="panel-box">
+
+						<div class="panel-content image-box user-photo-drop-zone">
+							<input type="file"
+									data-role="upload"
+									data-show-file-list="false"
+									data-multiple="false"
+									data-validation="{ allowedExtensions: ['.jpg', '.png']}"
+									data-async="{ saveUrl: '{link LeSpaUser:User:User:}?do=avatar', autoUpload: true }"
+									data-bind="events: { success: uploadAvatarComplete, upload: uploadAvatarStart}"
+									data-drop-zone=".image-box.user-photo-drop-zone"
+									name="user-avatar">
+							<div class="ribbon">
+								<div class="bg-primary">{_users.user.current-user}</div>
+							</div>
+							<div class="image-content font-white">
+								<div class="meta-box meta-box-bottom">
+								</div>
+							</div>
+							{*
+							 * @todo Nahradit no-image za generovanou url pro no-image
+							 *}
+							<img data-bind="attr: { src: avatarBig}" src="/{$avatarLoad}" />
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-8">
+				<ul class="list-group row list-group-icons">
+					<li class="col-md-3 active">
+						<a href="#user-personal-informations" data-toggle="tab" class="list-group-item">
+							<i class="glyph-icon font-red icon-tty"></i>
+							{_users.user.personal-informations}
+						</a>
+					</li>
+					<li class="col-md-3">
+						<a href="#user-application-settings" data-toggle="tab" class="list-group-item">
+							<i class="glyph-icon icon-sliders"></i>
+							{_users.user.application-settings}
+						</a>
+					</li>
+				</ul>
+				<div class="tab-content">
+					<div class="tab-pane pad0A fade active in" id="user-personal-informations">
+						<div class="content-box">
+							<form class="form-horizontal bordered-row">
+								<div class="form-group remove-border">
+									<label class="col-sm-3 control-label">{_users.user.username}:</label>
+									<div class="col-sm-6">
+										<input data-bind="value: user.username" type="text" class="form-control" placeholder="{_users.user.username}...">
+									</div>
+								</div>
+								<div class="form-group remove-border">
+									<label class="col-sm-3 control-label">{_users.user.first-name}:</label>
+									<div class="col-sm-6">
+										<input data-bind="value: user.name" type="text" class="form-control" placeholder="{_users.user.first-name}...">
+									</div>
+								</div>
+								<div class="form-group remove-border">
+									<label class="col-sm-3 control-label">{_users.user.last-name}:</label>
+									<div class="col-sm-6">
+										<input data-bind="value: user.surname" type="text" class="form-control" placeholder="{_users.user.last-name}...">
+									</div>
+								</div>
+								<div class="form-group remove-border">
+									<label class="col-sm-3 control-label">{_users.user.degree}:</label>
+									<div class="col-sm-6">
+										<input data-bind="value: user.degree" type="text" class="form-control" placeholder="{_users.user.degree}...">
+									</div>
+								</div>
+								<div class="form-group remove-border">
+									<label class="col-sm-3 control-label">{_users.user.email}:</label>
+									<div class="col-sm-6">
+										<input data-bind="value: user.email" type="email" class="form-control" placeholder="{_users.user.email}...">
+									</div>
+								</div>
+								<div class="form-group remove-border">
+									<label class="col-sm-3 control-label">{_users.user.phone}:</label>
+									<div class="col-sm-6">
+										<input
+												data-role="maskedtextbox"
+												data-bind="value: user.phone"
+												data-mask="+999 000 000 000"
+												type="text" class="form-control" placeholder="{_users.user.phone}...">
+									</div>
+								</div>
+							</form>
+						</div>
+					</div>
+					<div class="tab-pane fade" id="user-application-settings">
+						tab 2
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </script>
