--- a/app/templates/SPA/snippets/header-nav-left.latte
+++ b/app/templates/SPA/snippets/header-nav-left.latte
@@ -5,7 +5,7 @@
 	<div class="user-account-btn dropdown">
 		<a href="#" title="My Account" class="user-profile clearfix" data-toggle="dropdown">
 			<img width="28" src="../../assets/image-resources/gravatar.jpg" alt="Profile image">
-			<span>Michael Lee</span>
+			<span>Marek Bartes</span>
 			<i class="glyph-icon icon-angle-down"></i>
 		</a>
 		<div class="dropdown-menu float-right">
@@ -17,15 +17,15 @@
 					</div>
 					<div class="user-info">
                             <span>
-                                Michael Lee
-                                <i>UX/UI developer</i>
+                                Marek Bartes
+                                <i>Admin</i>
                             </span>
-						<a href="#" title="Edit profile">Edit profile</a>
+						<a data-bind="click: openPanel" data-panel-type="user-edit" data-user-id="1" title="Edit profile">Edit profile</a>
 						<a href="#" title="View notifications">View notifications</a>
 					</div>
 				</div>
 				<div class="button-pane button-pane-alt pad5L pad5R text-center">
-					<a href="#" class="btn btn-flat display-block font-normal btn-danger">
+					<a n:href="LeSignIn:UserSignIn:Sign:out" class="btn btn-flat display-block font-normal btn-danger">
 						<i class="glyph-icon icon-power-off"></i>
 						Logout
 					</a>
