--- a/websrc/stylesheets/main.scss
+++ b/websrc/stylesheets/main.scss
@@ -158,11 +158,13 @@ html {
   // kendo tab design fix :-)
   background: transparent;
   border: 0;
+  box-shadow: none;
 
   li {
     &.closeable {
       a {
         padding-right: 30px;
+        border-radius: 0;
       }
 
       i {
@@ -220,6 +222,106 @@ html {
     &.k-state-selected {
         background-color: $color-active;
         border-color: $color-active;
+    }
+  }
+}
+
+.k-widget {
+  &.k-grid {
+    border-width: 0;
+
+    .k-grid-header-wrap {
+      border-width: 0;
+    }
+
+  }
+}
+
+#page-content {
+  padding: 0;
+}
+
+#app-content {
+  .k-grid {
+    border-color: #EBEEF5;
+
+    .k-header {
+      background-color: #f9fafe;
+    }
+
+    .k-alt {
+      background-color: #f9fafe;
+    }
+
+  }
+
+  .content-box {
+    padding: 15px;
+
+    h3 {
+      margin-top: -15px;
+    }
+  }
+
+  #user-edit {
+    .image-box {
+      .k-upload {
+        background: transparent;
+        border: 0;
+        position: absolute;
+        right: 0;
+        top: -4px;
+
+        .k-upload-button {
+          background: transparent;
+          border: 0;
+          display: block;
+          font-size: 0;
+          height: 30px;
+          width: 30px;
+
+          &:before {
+            background: rgba(0, 0, 0, 0.5);
+            color: #fff;
+            content: "\f03e";
+            font-family: FontAwesome;
+            font-size: 20px;
+            height: 30px;
+            left: 0;
+            line-height: 30px;
+            position: absolute;
+            top: 0;
+            opacity: 0;
+            transition: all 0.25s;
+            width: 30px;
+          }
+        }
+
+        .k-upload-status {
+          display: none;
+        }
+
+        .k-upload-files {
+          display: none;
+        }
+      }
+
+      &:hover {
+        .k-upload {
+          .k-upload-button {
+            &:before {
+              opacity: 1;
+              transition: all 0.25s;
+            }
+          }
+        }
+      }
+    }
+
+    .user-photo-drop-zone {
+      .k-dropzone-hovered {
+        background: transparent;
+      }
     }
   }
 }
