--- a/vendor-dev/legerete/spa-kendo-scheduler/nette-src/Components/templates/spa-scheduler.latte
+++ b/vendor-dev/legerete/spa-kendo-scheduler/nette-src/Components/templates/spa-scheduler.latte
@@ -1,4 +1,4 @@
-<script id="spa-view-scheduler" type="text/x-kendo-template" data-source-read="{link :LeSpaScheduler:Scheduler:Scheduler: do=>read}" data-source-create="{link :LeSpaScheduler:Scheduler:Scheduler: do=>create}" data-source-update="{link :LeSpaScheduler:Scheduler:Scheduler: do=>update}" data-source-destroy="{link :LeSpaScheduler:Scheduler:Scheduler: do=>destroy}">
+<script id="spa-view-scheduler" type="text/x-kendo-template" data-source-read="{plink :LeSpaScheduler:Scheduler:Scheduler: do=>read}" data-source-create="{plink :LeSpaScheduler:Scheduler:Scheduler: do=>create}" data-source-update="{plink :LeSpaScheduler:Scheduler:Scheduler: do=>update}" data-source-destroy="{plink :LeSpaScheduler:Scheduler:Scheduler: do=>destroy}">
 	<div class="content-box">
 		<h3 class="content-box-header">{_scheduler.h1}
 		</h3>
